--- a/sena.html
+++ b/sena.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -32,9 +33,12 @@
       margin-bottom: 20px;
       background-color: #f9f9f9;
       box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     .doc-card h3 {
-      margin: 0 0 10px 0;
+      margin: 0;
       color: #1f6feb;
       font-size: 20px;
     }
@@ -65,27 +69,26 @@
 </head>
 <body>
 
-<div class="container">
-  <h2>Documentos SENA</h2>
+  <div class="container">
+    <h2>Documentos SENA</h2>
 
-  <div class="doc-card">
-    <h3>Acta Académica</h3>
-    <a href="soportes/educacion/sena/acta-academica.pdf" target="_blank">Ir a documento</a>
+    <div class="doc-card">
+      <h3>Acta Académica</h3>
+      <a href="soportes/educacion/sena/acta-academica.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h3>Certificado Final</h3>
+      <a href="soportes/educacion/sena/certificado-final.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h3>Documento Oficial TCOCF</h3>
+      <a href="soportes/educacion/sena/documento-oficial-tcocf.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <a class="back-link" href="index.html">← Volver al CV | DSBC</a>
   </div>
-
-  <div class="doc-card">
-    <h3>Certificado Final</h3>
-    <a href="soportes/educacion/sena/certificado-final.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <div class="doc-card">
-    <h3>Documento Oficial TCOCF</h3>
-    <a href="soportes/educacion/sena/documento-oficial-tcocf.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <a class="back-link" href="index.html">← Volver al CV | DSBC</a>
-
-</div>
 
 </body>
 </html>
