--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card">
           <h3>Documentos Oficiales – SENA</h3>
           <p>Acta académica, certificado final y documento oficial TC/CF que certifican formación y calificaciones.</p>
-          <a href="soportes/educacion/sena.html" target="_blank">Ver detalles</a>
+          <a href="sena.html">Ver detalles</a>
         </div>
       </div>
     </div>
