--- a/experiencia.html
+++ b/experiencia.html
@@ -78,10 +78,10 @@
   <div class="container">
     <h2>Experiencia</h2>
 
-    <!-- PASANTÍA EN INVESTIGACIÓN -->
+    <!-- PASANTÍA / EPI -->
     <div class="card">
       <h3>Pasantía en Investigación</h3>
-      <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
+      <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos.</p>
       <a href="soportes/experiencia/pasantia-investigacion.pdf" target="_blank">Ir a documento</a>
     </div>
 
