--- a/index.html
+++ b/index.html
@@ -174,16 +174,45 @@
     <div class="section">
       <h2>Investigaciones</h2>
       <div class="cards">
+
+        <!-- Proyectos Investigativos -->
         <div class="card">
-          <h3>Proyectos Investigativos</h3>
-          <p>Acceso a investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
-          <a href="investigaciones.html#proyectos-investigacion" target="_blank">Ver detalles</a>
+          <h3>Avance Investigación – Subregión Ariari (Meta)</h3>
+          <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y desarrollo regional sostenible.</p>
+          <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ir a documento</a>
         </div>
+
+        <div class="card">
+          <h3>De la Guerra a la Soñada Paz</h3>
+          <p>Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.</p>
+          <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ir a documento</a>
+        </div>
+
+        <div class="card">
+          <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
+          <p>Análisis del impacto económico de la producción de coca en el PIB de Nariño (1999–2023).</p>
+          <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ir a documento</a>
+        </div>
+
+        <div class="card">
+          <h3>Índice Multidimensional de Bogotá</h3>
+          <p>Estudio del índice multidimensional en Bogotá entre 2013 y 2023 con enfoque socioeconómico.</p>
+          <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ir a documento</a>
+        </div>
+
+        <div class="card">
+          <h3>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h3>
+          <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva.</p>
+          <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ir a documento</a>
+        </div>
+
+        <!-- Ecohotel Los Arrendajos -->
         <div class="card">
           <h3>Ecohotel Los Arrendajos</h3>
-          <p>Proyecto de turismo sostenible con planificación estratégica, mercado y stakeholders.</p>
+          <p>Proyecto de turismo sostenible con planificación estratégica, análisis de mercado y gestión de stakeholders.</p>
           <a href="fases-ecohotel.html" target="_blank">Ver fases</a>
         </div>
+
       </div>
     </div>
 
