--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -47,10 +46,9 @@
       line-height: 1.5;
     }
     .profile-details {
-      flex: 1;
-      color: #24292f;
-      font-size: 16px;
-      line-height: 1.5;
+      margin-top: 16px;
+      font-style: italic;
+      color: #57606a;
     }
     .section {
       margin-top: 50px;
@@ -115,13 +113,11 @@
         <h1>Daniel Betancur</h1>
         <p>Estudiante de Economía</p>
         <p>Universidad de los Llanos</p>
-      </div>
-      <div class="profile-details">
-        <p>Investigador en economía ambiental y sostenible, con experiencia en análisis de proyectos y gestión administrativa.</p>
+        <p class="profile-details">Investigador en economía ambiental y sostenible, con experiencia en análisis de proyectos y gestión administrativa.</p>
       </div>
     </div>
 
-    <!-- Educación -->
+    <!-- Secciones -->
     <div class="section">
       <h2>Educación</h2>
       <div class="cards">
@@ -132,23 +128,22 @@
         </div>
         <div class="card">
           <h3>ESG – Estrategias de Sostenibilidad</h3>
-          <p>Formación en estrategias ESG y gestión responsable.</p>
+          <p>Certificado en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
           <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ir a documento</a>
         </div>
         <div class="card">
           <h3>Introducción a la Econometría</h3>
-          <p>Fundamentos de econometría, análisis estadístico y modelos básicos.</p>
+          <p>Certificado en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
           <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ir a documento</a>
         </div>
         <div class="card">
           <h3>Documentos Oficiales SENA</h3>
-          <p>Acta académica, certificado final y documento oficial TCOCF.</p>
-          <a href="soportes/educacion/sena/acta-academica.pdf" target="_blank">Ir a documento</a>
+          <p>Incluye acta académica, certificado final y documento oficial TCOCF.</p>
+          <a href="soportes/educacion/sena.html" target="_blank">Ver detalles</a>
         </div>
       </div>
     </div>
 
-    <!-- Experiencia -->
     <div class="section">
       <h2>Experiencia</h2>
       <div class="cards">
@@ -159,18 +154,17 @@
         </div>
         <div class="card">
           <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
-          <p>Apoyo en procesos administrativos y organización documental.</p>
+          <p>Gestión administrativa y acompañamiento en procesos institucionales.</p>
           <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ir a documento</a>
         </div>
         <div class="card">
           <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
-          <p>Apoyo técnico y administrativo en procesos operativos y gestión institucional.</p>
+          <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
           <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf" target="_blank">Ir a documento</a>
         </div>
       </div>
     </div>
 
-    <!-- Investigaciones -->
     <div class="section">
       <h2>Investigaciones</h2>
       <div class="cards">
