--- a/investigaciones.html
+++ b/investigaciones.html
@@ -25,10 +25,12 @@
       padding-bottom: 8px;
       margin-bottom: 30px;
     }
-    h3 {
+    .section-title {
+      margin-top: 40px;
       color: #1f6feb;
-      margin-top: 24px;
-      margin-bottom: 12px;
+      font-size: 24px;
+      border-bottom: 1px solid #1f6feb;
+      padding-bottom: 6px;
     }
     p {
       line-height: 1.6;
@@ -75,33 +77,53 @@
 
     <h2>Investigaciones</h2>
 
-    <!-- Proyectos de Investigación -->
-    <h3>Proyectos de Investigación</h3>
+    <!-- Sección: Proyectos investigativos -->
+    <div class="section-title">Proyectos Investigativos</div>
 
     <div class="doc-card">
-      <h4>Avance de investigación – Subregión Ariari (Meta)</h4>
+      <h4>Avance Investigación – Subregión Ariari (Meta)</h4>
+      <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y desarrollo regional sostenible.</p>
       <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
-      <h4>Columbia: Caminos hacia la Paz y la Reconstrucción</h4>
+      <h4>De la Guerra a la Soñada Paz</h4>
+      <p>Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.</p>
       <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
-      <h4>Impacto Económico de la Producción de Coca en el PIB (Nariño, 1999–2023)</h4>
+      <h4>Impacto Económico de la Producción de Coca en el PIB</h4>
+      <p>Análisis del impacto económico de la producción de coca en el PIB de Nariño (1999–2023).</p>
       <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
-      <h4>Índice Multidimensional de Bogotá (2013–2023)</h4>
+      <h4>Índice Multidimensional de Bogotá</h4>
+      <p>Estudio del índice multidimensional en Bogotá entre 2013 y 2023 con enfoque socioeconómico.</p>
       <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
       <h4>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h4>
+      <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva.</p>
       <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ir a documento</a>
     </div>
+
+    <!-- Sección: Proyecto Ecohotel -->
+    <div class="section-title">Ecohotel Los Arrendajos</div>
+
+    <div class="doc-card">
+      <h4>Proyecto Ecohotel Los Arrendajos</h4>
+      <p>Desarrollo integral del proyecto de turismo sostenible, incluyendo planificación, análisis de mercado y gestión de actores.</p>
+      <a href="fases-ecohotel.html" class="section-link" target="_blank">Ver fases →</a>
+    </div>
+
+    <p style="margin-top:40px;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
+    </p>
+
+  </div>
 
 </body>
 </html>
