--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .header {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       gap: 40px;
       margin-bottom: 40px;
     }
@@ -32,7 +32,8 @@
       box-shadow: 0 6px 18px rgba(0,0,0,0.12);
     }
     .profile-info {
-      flex: 1;
+      display: flex;
+      flex-direction: column;
     }
     .profile-info h1 {
       color: #1f6feb;
@@ -40,15 +41,10 @@
       font-size: 32px;
     }
     .profile-info p {
-      margin: 4px 0;
+      margin: 2px 0;
       color: #57606a;
       font-size: 16px;
       line-height: 1.5;
-    }
-    .profile-details {
-      margin-top: 16px;
-      font-style: italic;
-      color: #57606a;
     }
     .section {
       margin-top: 50px;
@@ -113,7 +109,7 @@
         <h1>Daniel Betancur</h1>
         <p>Estudiante de Economía</p>
         <p>Universidad de los Llanos</p>
-        <p class="profile-details">Investigador en economía ambiental y sostenible, con experiencia en análisis de proyectos y gestión administrativa.</p>
+        <p>Investigador en economía ambiental y sostenible, con experiencia en análisis de proyectos y gestión administrativa.</p>
       </div>
     </div>
 
@@ -124,22 +120,22 @@
         <div class="card">
           <h3>Certificado de Créditos</h3>
           <p>Acredita los créditos cursados y aprobados dentro del programa académico.</p>
-          <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ir a documento</a>
+          <a href="educacion.html">Ir a documento</a>
         </div>
         <div class="card">
           <h3>ESG – Estrategias de Sostenibilidad</h3>
-          <p>Certificado en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
+          <p>Certificado de formación en estrategias ESG y gestión responsable.</p>
           <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ir a documento</a>
         </div>
         <div class="card">
           <h3>Introducción a la Econometría</h3>
-          <p>Certificado en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
+          <p>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
           <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ir a documento</a>
         </div>
         <div class="card">
           <h3>Documentos Oficiales SENA</h3>
-          <p>Incluye acta académica, certificado final y documento oficial TCOCF.</p>
-          <a href="soportes/educacion/sena.html" target="_blank">Ver detalles</a>
+          <p>Acta Académica, Certificado Final y Documento Oficial TCOCF.</p>
+          <a href="soportes/educacion/sena.html">Ver detalles</a>
         </div>
       </div>
     </div>
@@ -154,7 +150,7 @@
         </div>
         <div class="card">
           <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
-          <p>Gestión administrativa y acompañamiento en procesos institucionales.</p>
+          <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
           <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ir a documento</a>
         </div>
         <div class="card">
@@ -168,45 +164,16 @@
     <div class="section">
       <h2>Investigaciones</h2>
       <div class="cards">
-
-        <!-- Proyectos Investigativos -->
         <div class="card">
-          <h3>Avance Investigación – Subregión Ariari (Meta)</h3>
-          <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y desarrollo regional sostenible.</p>
-          <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ir a documento</a>
+          <h3>Proyectos Investigativos</h3>
+          <p>Acceso a trabajos de investigación en ordenamiento territorial, economía y desarrollo regional.</p>
+          <a href="investigaciones.html">Ir a documento</a>
         </div>
-
-        <div class="card">
-          <h3>De la Guerra a la Soñada Paz</h3>
-          <p>Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.</p>
-          <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ir a documento</a>
-        </div>
-
-        <div class="card">
-          <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
-          <p>Análisis del impacto económico de la producción de coca en el PIB de Nariño (1999–2023).</p>
-          <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ir a documento</a>
-        </div>
-
-        <div class="card">
-          <h3>Índice Multidimensional de Bogotá</h3>
-          <p>Estudio del índice multidimensional en Bogotá entre 2013 y 2023 con enfoque socioeconómico.</p>
-          <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ir a documento</a>
-        </div>
-
-        <div class="card">
-          <h3>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h3>
-          <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva.</p>
-          <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ir a documento</a>
-        </div>
-
-        <!-- Ecohotel Los Arrendajos -->
         <div class="card">
           <h3>Ecohotel Los Arrendajos</h3>
-          <p>Proyecto de turismo sostenible con planificación estratégica, análisis de mercado y gestión de stakeholders.</p>
-          <a href="fases-ecohotel.html" target="_blank">Ver fases</a>
+          <p>Proyecto de turismo sostenible con planificación estratégica, mercado y stakeholders.</p>
+          <a href="fases-ecohotel.html">Ver fases</a>
         </div>
-
       </div>
     </div>
 
