--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="card">
           <h3>Proyectos Investigativos</h3>
           <p>Acceso a trabajos de investigación en ordenamiento territorial, economía y desarrollo regional.</p>
-          <a href="investigaciones.html">Ir a documento</a>
+          <a href="investigaciones.html">Ver detalles</a>
         </div>
         <div class="card">
           <h3>Ecohotel Los Arrendajos</h3>
