--- a/investigaciones.html
+++ b/investigaciones.html
@@ -28,7 +28,7 @@
     h3 {
       color: #1f6feb;
       margin-top: 24px;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
     }
     p {
       line-height: 1.6;
@@ -39,14 +39,19 @@
       border: 1px solid #ddd;
       border-radius: 10px;
       background-color: #f9f9f9;
-      padding: 18px 20px;
-      max-width: 480px;
-      margin-bottom: 18px;
+      padding: 20px;
+      margin-bottom: 20px;
     }
     .doc-card h4 {
       margin: 0 0 8px 0;
       color: #1f6feb;
       font-size: 18px;
+    }
+    .doc-card strong {
+      display: block;
+      margin-top: 6px;
+      margin-bottom: 4px;
+      color: #24292f;
     }
     .doc-card a {
       text-decoration: none;
@@ -56,14 +61,14 @@
     .doc-card a:hover {
       text-decoration: underline;
     }
-    .section-link {
-      margin-top: 12px;
+    .back-link {
       display: inline-block;
+      margin-top: 40px;
       color: #1f6feb;
       font-weight: bold;
       text-decoration: none;
     }
-    .section-link:hover {
+    .back-link:hover {
       text-decoration: underline;
     }
   </style>
@@ -75,39 +80,69 @@
 
     <h2>Investigaciones</h2>
 
+    <h3>Proyectos Investigativos</h3>
+
+    <!-- Estrategias integrales para el ordenamiento territorial -->
     <div class="doc-card">
-      <h4>Avance de investigación – Subregión Ariari (Meta)</h4>
+      <h4>Estrategias integrales para el ordenamiento territorial en el departamento del Meta</h4>
+      <strong>Objetivo:</strong>
+      <p>Analizar de manera comparativa la convergencia de los Planes de Ordenamiento Territorial (POT), Planes Básicos (PBOT) y Esquemas (EOT) de los municipios de la subregión del Ariari para identificar su coherencia con las condiciones territoriales y ambientales locales.</p>
+      <strong>Descripción:</strong>
+      <p>Este trabajo es un avance de investigación centrado en la Subregión Ariari con una proyección al año 2032. Utiliza un enfoque cualitativo mediante revisión documental y análisis de actores clave. Busca evidenciar brechas entre la planificación departamental y municipal, y proponer estrategias para un desarrollo regional sostenible en una zona históricamente agrícola y promisoria.</p>
       <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ir a documento</a>
     </div>
 
+    <!-- De la Guerra a la Soñada Paz -->
     <div class="doc-card">
       <h4>De la Guerra a la Soñada Paz</h4>
+      <strong>Objetivo:</strong>
+      <p>Analizar, a través de un relato figurado, los retos que enfrentan los Estados tras un conflicto interno, basándose en teorías sobre legitimidad institucional y reconstrucción de la confianza.</p>
+      <strong>Descripción:</strong>
+      <p>Este documento es un ensayo o relato académico enmarcado en la asignatura de Economía del Postconflicto. El texto utiliza la historia de una región ficticia llamada "Columbia" para exponer de manera metafórica elementos de la historia contemporánea de Colombia y su proceso de posconflicto. Destaca la importancia de la relación entre la ciudadanía y el Estado para evitar recaer en conflictos bélicos.</p>
       <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ir a documento</a>
     </div>
 
+    <!-- Impacto económico de la producción de coca -->
     <div class="doc-card">
-      <h4>Impacto Económico de la Producción de Coca en el PIB – Nariño 1999–2023</h4>
+      <h4>El impacto económico de la producción de coca en el PIB de Nariño (1999-2023)</h4>
+      <strong>Objetivo:</strong>
+      <p>Determinar el impacto económico de la producción de hoja de coca en el Producto Interno Bruto (PIB) del departamento de Nariño entre los años 1999 y 2023.</p>
+      <strong>Descripción:</strong>
+      <p>Es una investigación económica que evalúa la relación entre los cultivos ilícitos y la economía departamental. Emplea un enfoque mixto (cualitativo y cuantitativo) que incluye dos modelos econométricos para evaluar variables como la producción de coca, la tasa de cambio real, el índice de Gini y el desempleo. Explora la "disyuntiva" de si estos cultivos aportan a la economía de grupos vulnerables o si simplemente aumentan la violencia y la dependencia económica.</p>
       <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ir a documento</a>
     </div>
 
+    <!-- Índice Multidimensional de Bogotá -->
     <div class="doc-card">
-      <h4>Índice Multidimensional de Bogotá 2013–2023</h4>
+      <h4>Índice Multidimensional de Bogotá entre 2013-2023</h4>
+      <strong>Objetivo:</strong>
+      <p>Estimar el nivel de desarrollo sostenible de Bogotá a través de un Índice Multidimensional que abarca cuatro dimensiones: económica, política, social y ambiental.</p>
+      <strong>Descripción:</strong>
+      <p>Este estudio analiza el estado del desarrollo en la capital colombiana durante una década. Utiliza una metodología de "biogramas" para clasificar el estado del sistema como óptimo, estable, inestable, crítico o en colapso. En la dimensión económica, analiza indicadores como la tasa de informalidad, el crecimiento del PIB, el IPC y la competitividad.</p>
       <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ir a documento</a>
     </div>
 
+    <!-- Modelo de Interacción Ambiental -->
     <div class="doc-card">
-      <h4>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h4>
+      <h4>Parque Metropolitano Alma Viva (Villavicencio)</h4>
+      <strong>Objetivo:</strong>
+      <p>Evaluar los impactos ambientales y sociales derivados de la construcción del parque, buscando integrar la conservación del paisaje con la recreación y la educación ambiental.</p>
+      <strong>Descripción:</strong>
+      <p>Se trata de un análisis de interacción ambiental sobre un proyecto de infraestructura urbana en el Meta. El proyecto contempla la intervención de 7 u 8 hectáreas de un terreno total de más de 20 hectáreas, respetando rondas hídricas y conservando al menos un 60% de cobertura arbórea. Incluye una evaluación detallada mediante una Matriz de Leopold para medir impactos en el suelo, agua, aire, flora y fauna durante las etapas de desmonte, excavación y construcción.</p>
       <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ir a documento</a>
     </div>
 
+    <!-- Tipos de involucrados -->
     <div class="doc-card">
       <h4>Tipos de Involucrados</h4>
+      <strong>Objetivo:</strong>
+      <p>Clasificar los diferentes tipos de actores y su grado de involucramiento en proyectos de investigación y desarrollo regional.</p>
+      <strong>Descripción:</strong>
+      <p>Documento que identifica los stakeholders y analiza sus roles, responsabilidades e influencia en la ejecución de proyectos en contextos académicos y de planificación territorial.</p>
       <a href="soportes/investigaciones/tipos-de-involucrados.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <p style="margin-top:40px;">
-      <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
-    </p>
+    <a class="back-link" href="index.html">← Volver a la página principal</a>
 
   </div>
 
