--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -157,7 +157,7 @@
       <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <a class="back-link" href="investigaciones.html">← Volver a Investigaciones</a>
+    <a class="back-link" href="index.html">← Volver a la página principal</a>
   </div>
 
 </body>
