--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -43,28 +43,20 @@
       transform: translateY(-3px);
       box-shadow: 0 10px 25px rgba(0,0,0,0.12);
     }
-    .card h3 {
+    .card h3, .card h4 {
       margin: 0 0 10px 0;
       color: #1f6feb;
-      font-size: 20px;
+    }
+    .card h3 {
+      font-size: 22px;
+    }
+    .card h4 {
+      font-size: 18px;
     }
     .card p {
-      margin: 0 0 12px 0;
+      margin: 8px 0;
       line-height: 1.6;
       font-size: 15px;
-    }
-    .card a {
-      display: inline-block;
-      text-decoration: none;
-      background-color: #1f6feb;
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    .card a:hover {
-      background-color: #155bb5;
     }
     .back-link {
       display: inline-block;
@@ -82,82 +74,72 @@
 <body>
 
   <div class="container">
-    <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
+    <h2>Proyecto Ecohotel “Los Arrendajos”</h2>
     <p class="description">
-      Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, organizado por fases con sus respectivos documentos de soporte. Cada fase refleja un paso clave en la formulación y planificación del proyecto.
+      El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra el hospedaje ecológico con la conservación ambiental a través de un jardín botánico educativo y sensorial. Su propósito central es ofrecer una experiencia de turismo regenerativo que promueva el uso responsable de los recursos naturales y la educación ambiental.
     </p>
 
-    <!-- Fase 1: Estudio Normativo -->
     <div class="card">
-      <h3>Fase 1: Estudio Normativo</h3>
-      <p>Análisis de normativas, regulaciones y requisitos legales aplicables al proyecto Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ir a documento</a>
+      <h3>Descripción general</h3>
+      <p>Combina hospedaje confortable, alimentación saludable basada en productos locales, tratamientos de spa con ingredientes naturales y experiencias educativas en el jardín botánico.</p>
+      <p>Infraestructura proyectada con materiales sostenibles (madera certificada, bambú), senderos ecológicos señalizados y áreas interactivas.</p>
+      <p>Actores clave: Instituto de Turismo del Meta, Cormacarena y universidades locales.</p>
+      <p>Impacto: Posicionar a Villavicencio como referente de turismo de naturaleza, reforestación, protección del patrimonio y diversificación económica.</p>
     </div>
 
-    <!-- Fase 2: Generalidades del Proyecto -->
+    <h3>Fases del Proyecto (Embudo de Soluciones)</h3>
+
     <div class="card">
-      <h3>Fase 2: Generalidades del Proyecto</h3>
-      <p>Presentación del proyecto Ecohotel Los Arrendajos: objetivos, alcance y contexto general.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ir a documento</a>
+      <h4>1. Integración de Políticas Públicas</h4>
+      <p><strong>Objetivo:</strong> Alinear el proyecto con las directrices del Ministerio de Comercio, Industria y Turismo (MinCIT) mediante el análisis del marco estatal y gubernamental que interviene en el sector turismo.</p>
     </div>
 
-    <!-- Fase 3: Mapa de Valor -->
     <div class="card">
-      <h3>Fase 3: Mapa de Valor</h3>
-      <p>Representación de la propuesta de valor del Ecohotel y sus elementos estratégicos para clientes y stakeholders.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ir a documento</a>
+      <h4>2. Fortalecimiento de Inversión y Financiamiento</h4>
+      <p><strong>Objetivo:</strong> Identificar fuentes de capital como créditos (Bancóldex), subsidios gubernamentales, inversión privada y crowdfunding para asegurar la viabilidad económica del proyecto.</p>
     </div>
 
-    <!-- Fase 4: Mapeo de Stakeholders -->
     <div class="card">
-      <h3>Fase 4: Mapeo de Stakeholders</h3>
-      <p>Identificación y análisis de los grupos de interés y actores clave del proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ir a documento</a>
+      <h4>3. Incremento del Turismo Ecológico</h4>
+      <p><strong>Objetivo:</strong> Atraer visitantes interesados en la conservación de la biodiversidad y el contacto directo con la naturaleza.</p>
     </div>
 
-    <!-- Fase 5: Relación de Actores -->
     <div class="card">
-      <h3>Fase 5: Relación de Actores</h3>
-      <p>Listado y descripción de los actores involucrados en el desarrollo del Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ir a documento</a>
+      <h4>4. Coordinación Interinstitucional</h4>
+      <p><strong>Objetivo:</strong> Establecer mecanismos de articulación entre instituciones públicas y el sector privado para optimizar la gestión del proyecto dentro del marco normativo.</p>
     </div>
 
-    <!-- Fase 6: Stakeholders -->
     <div class="card">
-      <h3>Fase 6: Stakeholders</h3>
-      <p>Perfil y responsabilidades de cada stakeholder dentro del proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ir a documento</a>
+      <h4>5. Involucramiento de la Población Local</h4>
+      <p><strong>Objetivo:</strong> Integrar a la comunidad en el impulso turístico, generando empleos y oportunidades de desarrollo para los habitantes de la zona.</p>
     </div>
 
-    <!-- Fase 7: Mercado Potencial -->
     <div class="card">
-      <h3>Fase 7: Mercado Potencial</h3>
-      <p>Análisis del mercado y la demanda potencial para el Ecohotel Los Arrendajos.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ir a documento</a>
+      <h4>6. Visualización de Espacios con Potencial</h4>
+      <p><strong>Objetivo:</strong> Identificar y reconocer áreas estratégicas con alto valor biológico para el desarrollo de la infraestructura y el jardín botánico.</p>
     </div>
 
-    <!-- Fase 8: Proyección de Mercado -->
     <div class="card">
-      <h3>Fase 8: Proyección de Mercado</h3>
-      <p>Estimación de ingresos y demanda a futuro para el proyecto Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ir a documento</a>
+      <h4>7. Formación Turística Sostenible</h4>
+      <p><strong>Objetivo:</strong> Desarrollar programas educativos y talleres sobre sostenibilidad y botánica tanto para el personal como para los huéspedes.</p>
     </div>
 
-    <!-- Fase 9: Modelo CANVAS -->
     <div class="card">
-      <h3>Fase 9: Modelo CANVAS</h3>
-      <p>Representación gráfica de la estructura de negocio y propuesta de valor del Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ir a documento</a>
+      <h4>8. Uso Responsable de Recursos Naturales</h4>
+      <p><strong>Objetivo:</strong> Implementar prácticas operativas sostenibles, como uso de energías renovables, manejo de residuos y captación de agua lluvia.</p>
     </div>
 
-    <!-- Fase 10: Tipos de Involucrados -->
     <div class="card">
-      <h3>Fase 10: Tipos de Involucrados</h3>
-      <p>Clasificación de los diferentes tipos de actores y su grado de involucramiento en el proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ir a documento</a>
+      <h4>9. Fomento de Incentivos</h4>
+      <p><strong>Objetivo:</strong> Aplicar beneficios y estímulos diseñados para empresas que promuevan prácticas ecoturísticas y de conservación.</p>
     </div>
 
-    <a class="back-link" href="index.html">← Volver a la página principal</a>
+    <div class="card">
+      <h4>10. Líneas de Crédito y Subsidios Específicos</h4>
+      <p><strong>Objetivo:</strong> Acceder a mecanismos financieros sectoriales diseñados para proyectos de infraestructura ecológica y desarrollo turístico sostenible.</p>
+    </div>
+
+    <a class="back-link" href="investigaciones.html">← Volver a Investigaciones</a>
   </div>
 
 </body>
